<resources>
    <string name="app_name">Agrodeal</string>
    <string name="title_activity_menu">menu</string>
    <string name="name">Enter Name</string>
    <string name="email">Enter Email</string>
    <string name="password">Enter Password</string>
    <string name="city">Enter City</string>
    <string name="mobile">Enter Mobile</string>
    <string name="dealer">Dealer</string>
    <string name="broker">Broker</string>
    <string name="farmer">Farmer</string>
    <string name="crop">Crop</string>
    <string name="review">Review</string>
    <string name="referralCode">Enter Referral Code(Optional)</string>
    <string name="registerHere">Register here..!</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="appHeading">Agrodeal</string>
    <string name="cropName">Enter Crop Name</string>
    <string name="cropRate">Enter Crop Rate</string>
    <string name="submit">Submit</string>
    <string name="addCrop">Add Crop</string>
    <string name="cropDetail">Add Detail</string>
    <string name="myCrop">My Crops</string>
    <string name="myAuctions">My Auctions</string>
    <string name="allAuctions">All Auctions</string>
    <string name="allFarmers">All Farmers</string>
    <string name="thank_you">Thank you</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_all_auctions">All Auctions</string>
    <string name="reviewPlaceholder">Enter your Review here</string>
    <string name="addReview">Review</string>
    <string name="allDealers">All Dealers</string>
    <string name="stop">Stop</string>
    <string name="title_activity_all_dealers">All Dealers</string>
    <string name="rating">Rating(between 0 to 5)</string>
    <string name="rate">Rating</string>
    <string name="viewReviews">View Reviews</string>
    <string name="title_activity_dealer">Dealer Profile</string>
    <string name="enterBid">Enter bid amount..</string>
    <string name="canView">You can only view</string>
    <string name="cropSold">Crop Sold</string>
    <string name="add">Add</string>
    <string name="startsFrom"> starts from </string>
    <string name="soldCrops">Sold Crops</string>
    <string name="auctionRunning">Auction Running</string>
    <string name="winningAmount">Amount: </string>
    <string name="wonnedCrop">Wonned Crops</string>
    <string name="enterOtp">Enter OTP</string>

</resources>
