<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="android.ss.com.agrodeal.activity.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_centerVertical="true"
        tools:context="android.ss.com.agrodeal.MainActivity">


        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:layout_margin="10sp"
            android:inputType="text" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:layout_margin="10sp"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:layout_margin="10sp"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/mobile"
            android:maxLength="10"
            android:layout_margin="10sp"
            android:inputType="phone" />

        <EditText
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/city"
            android:maxLength="10"
            android:layout_margin="10sp"
            android:inputType="text" />

        <Spinner
            android:id="@+id/userType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="10"
            android:layout_margin="10sp"
            />

        <EditText
            android:id="@+id/referralCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/referralCode"
            android:maxLength="10"
            android:layout_margin="10sp"
            android:inputType="text" />



        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_marginTop="20sp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/register" />

    </LinearLayout>



</RelativeLayout>
