<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="android.ss.com.agrodeal.activity.AddCropActivity">


    <TextView
        android:id="@+id/txt_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="30sp"
        android:layout_marginRight="30sp"
        android:gravity="center"
        android:padding="10sp"
        android:text="@string/addCrop"
        android:layout_margin="20dp"

        android:textColor="@color/colorPrimary"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/cropName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:layout_margin="20dp"

        android:hint="@string/cropName"
        android:inputType="text" />

    <EditText
        android:id="@+id/cropRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/cropRate"
        android:inputType="numberDecimal"
        android:visibility="invisible"
        />

    <EditText
        android:id="@+id/cropDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="20dp"

        android:hint="@string/cropDetail"
        android:background="@null"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:overScrollMode="always"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:lines="6"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:scrollHorizontally="false"
        />

    <Spinner
        android:id="@+id/cropQuality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:maxLength="10" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/button_color"
        android:text="@string/submit" />

</LinearLayout>
