<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="android.ss.com.agrodeal.activity.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/addCrop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/addCrop" />

        <Button
            android:id="@+id/myCrops"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/myCrop"
             />

        <Button
            android:id="@+id/myAuctions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/myAuctions"
             />

        <Button
            android:id="@+id/allDealers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/allDealers"
            />

        <Button
            android:id="@+id/soldCropsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/soldCrops"
            />


    </LinearLayout>

</RelativeLayout>