<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="android.ss.com.agrodeal.activity.LoginActivity">

    <ImageButton
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:id="@+id/img_chnagip"
        android:layout_margin="6dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_setting_24dp"
        android:layout_alignParentRight="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:id="@+id/txt_type"
        android:gravity="center"
        android:padding="10sp"
        android:text="@string/appHeading"
        android:textColor="@color/colorPrimary"
        android:textSize="50sp"
        android:textStyle="italic|bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_centerVertical="true"
        tools:context="android.ss.com.agrodeal.MainActivity"
        android:id="@+id/linearLayout">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="20sp"
            android:hint="@string/password"
            android:inputType="textPassword"/>

        <Spinner
            android:id="@+id/userType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="10"
            android:layout_margin="10sp"
            />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_marginTop="20sp"
            android:layout_height="wrap_content"
            android:background="@color/button_color"

            android:text="@string/login" />

    </LinearLayout>

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/linearLayout"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_below="@+id/linearLayout"
        android:layout_marginEnd="119dp"
        android:layout_marginRight="119dp"
        android:layout_marginTop="34dp"

        android:text="@string/registerHere" />


</RelativeLayout>
